hphp/hack/test/typecheck/wellformedness_body.php.exp
File "wellformedness_body.php", line 6, characters 9-15:
Some type arguments violate their constraints (Typing[4323])
  File "wellformedness_body.php", line 3, characters 15-15:
  `T` is a constrained type parameter
  File "wellformedness_body.php", line 3, characters 20-27:
  This type constraint is violated
  File "wellformedness_body.php", line 3, characters 20-27:
  Expected `arraykey`
  File "wellformedness_body.php", line 6, characters 11-14:
  But got `bool`
File "wellformedness_body.php", line 11, characters 6-9:
Some type arguments violate their constraints (Typing[4323])
  File "wellformedness_body.php", line 3, characters 15-15:
  `T` is a constrained type parameter
  File "wellformedness_body.php", line 3, characters 20-27:
  This type constraint is violated
  File "wellformedness_body.php", line 3, characters 20-27:
  Expected `arraykey`
  File "wellformedness_body.php", line 11, characters 8-8:
  But got `B`
File "wellformedness_body.php", line 12, characters 11-17:
Some type arguments violate their constraints (Typing[4323])
  File "wellformedness_body.php", line 3, characters 15-15:
  `T` is a constrained type parameter
  File "wellformedness_body.php", line 3, characters 20-27:
  This type constraint is violated
  File "wellformedness_body.php", line 3, characters 20-27:
  Expected `arraykey`
  File "wellformedness_body.php", line 12, characters 13-16:
  But got `bool`
